[ Mac WK2 iOS Debug ] REGRESSION(r233667) Layout Test imported/w3c/web-platform-tests/web-animations/interfaces/DocumentTimeline/constructor.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=195233 <rdar://problem/48527231>

Reviewed by Dean Jackson.

We need to create the "main" document timeline (document.timeline) if it doesn't already exist and use its current time as a basis for any other DocumentTimeline instance.

* animation/DocumentTimeline.cpp:
(WebCore::DocumentTimeline::currentTime):

Canonical link: https://commits.webkit.org/210971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244032 268f45cc-cd09-0410-ab3c-d52691b4dbfc